Fixed individual item price being cut off from receipt image. Added overflow for receipt image.

--- a/Styles/Print_Receipt.css
+++ b/Styles/Print_Receipt.css
@@ -1,7 +1,5 @@
 #Print_Receipt {
     background-color: #3B82F6;
-    ;
-    /* Indigo */
     color: black;
     padding: 0.6rem 1.2rem;
     font-size: 1rem;
@@ -163,8 +161,10 @@
     position: relative;
     text-align: center;
     max-width: 400px;
+    max-height: 90vh;
     overflow-y: auto;
     width: 90%;
+    padding-bottom: 1.5rem;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
@@ -207,3 +207,9 @@
 .modal-content button:hover {
     background-color: #2563eb;
 }
+
+#modalImageContainer img {
+    margin: 5px;
+    display: block;
+    max-width: 100%;
+    height: auto; }
